@@ -1,3 +1,7 @@
+2008-11-18  Larry Jones  <lawrence.jones@siemens.com>
+
+	* sanity.sh: Fix nonportable ``date +%s'' test.
+
 2008-11-17  Larry Jones  <lawrence.jones@siemens.com>
 
 	* rcs.c (findmagictag): Don't try to do arithmetic on void *.
